@@ -15,6 +15,5 @@
 <entry key="trayrss.time.sa">false</entry>
 <entry key="trayrss.time.su">false</entry>
 <entry key="trayrss.time.vacationstart"/>
-<entry key="trayrss.displaycout">5</entry>
 <entry key="trayrss.time.th">true</entry>
 </properties>
