@@ -1,7 +1,12 @@
 package at.nullpointer.trayrss.monitor.notification;
 
+import at.nullpointer.trayrss.configuration.ReferenceCollection;
+import at.nullpointer.trayrss.configuration.feeds.NewsDAO;
+import at.nullpointer.trayrss.configuration.feeds.NewsDAOImpl;
+import at.nullpointer.trayrss.configuration.feeds.db.News;
 import de.jutzig.jnotification.JNotificationPopup;
 import de.jutzig.jnotification.PopupManager;
+import org.hibernate.Session;
 
 import java.awt.*;
 import java.awt.event.ActionEvent;
@@ -31,15 +36,22 @@ public class Dispose implements ActionListener {
 
 	JNotificationPopup popup;
 	PopupManager manager;
+    News node;
 
-	public Dispose(Component popup, PopupManager manager) {
+	public Dispose(Component popup, PopupManager manager, News node) {
 		super();
 		this.popup = (JNotificationPopup) popup;
 		this.manager=manager;
+        this.node = node;
 	}
 
 	public void actionPerformed(ActionEvent e) {
 		manager.dequeuePopup(popup);
+        Session sess = ReferenceCollection.SESSION_FACTORY.openSession();
+        NewsDAO nd = new NewsDAOImpl();
+        News test = nd.getNewsByData(node, sess);
+       test.setReadCount(new Long(ReferenceCollection.DISPLAY_COUNT));
+        nd.save(test,sess);
 
 	}
 
